--- a/src/components/ContactSection.astro
+++ b/src/components/ContactSection.astro
@@ -7,7 +7,7 @@ import BorderedButton from "./BorderedButton.astro";
   <h2>
     Et si on discutait de <strong>vos projets</strong><br /><em>ensemble ?</em>
   </h2>
-  <BorderedButton addedClasses="contactButton">
+  <BorderedButton addedClasses="contactButton" link="mailto:info.lanvink@gmail.com">
     Contactez-moi !
   </BorderedButton>
   <div class='shadow'></div>
