--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,7 +13,7 @@ import Logo from "./Logo.astro";
     <a href='/services'>Un dev fullstack</a>
     <a href='/portfolio'>Voir mes réalisations</a>
   </nav>
-  <BorderedButton addedClasses='headerButton'>Me contacter</BorderedButton>
+  <BorderedButton addedClasses='headerButton' link="mailto:info.lanvink@gmail.com">Me contacter</BorderedButton>
   <div class='menuMobileButton'>
     <input type='checkbox' name='menuMobileToggle' id='menuMobileToggle' />
     <label for='menuMobileToggle' class='menuMobileToggleLabel'>
@@ -27,7 +27,7 @@ import Logo from "./Logo.astro";
       <a href='/creation-site-web'>Un site web</a>
       <a href='/services'>Un dev fullstack</a>
       <a href='/portfolio'>Voir mes réalisations</a>
-      <BorderedButton addedClasses='mobileHeaderButton'
+      <BorderedButton addedClasses='mobileHeaderButton' link="mailto:info.lanvink@gmail.com"
         >Me contacter</BorderedButton
       >
     </nav>
