--- a/src/components/LastWork.astro
+++ b/src/components/LastWork.astro
@@ -10,7 +10,7 @@ import BorderedButton from "./BorderedButton.astro";
         Paragraphe sur la dernière TOP réalisation paragraphe sur la dernière
         TOP réalisation paragraphe sur la dernière TOP réalisation
       </p>
-      <BorderedButton
+      <BorderedButton link="portfolio"
         >Découvrir mes réalisations
       </BorderedButton>
     </div>
