--- a/src/components/Prices.astro
+++ b/src/components/Prices.astro
@@ -73,7 +73,7 @@ import BorderedButton from "./BorderedButton.astro";
     </ul>
   </div>
   <div class='buttonContainer'>
-    <BorderedButton addedClasses='pricesContactButton'>
+    <BorderedButton addedClasses='pricesContactButton' link="mailto:info.lanvink@gmail.com">
       Contactez-moi !
     </BorderedButton>
   </div>
