--- a/src/components/AllTechnologies.astro
+++ b/src/components/AllTechnologies.astro
@@ -1,5 +1,5 @@
 <section class='allTechnologies'>
-  <h2>Mes technologies</h2>
+  <h2 class="subtitle">Mes technologies</h2>
   <svg viewBox='0 0 264 140' class='svg-11'>
     <path
       d='M206 53.9998C256.294 -3 105 -29.0002 10.0001 53.9997C-37 95.0629 101 173 206 53.9998Z'
@@ -23,11 +23,6 @@
     background-size: cover;
     background-repeat: no-repeat;
     h2 {
-      color: rgba(255, 255, 255, 0.4);
-      font-weight: bold;
-      font-size: 6rem;
-      line-height: 0.9;
-      max-width: 60vw;
       position: relative;
       text-align: center;
     }
