--- a/src/components/Ecoconception.astro
+++ b/src/components/Ecoconception.astro
@@ -1,5 +1,5 @@
 <section class='ecoconception'>
-  <h2>Eco-conception</h2>
+  <h2 class="subtitle">Eco-conception</h2>
   <div class='content'>
     <h3>Ce que l'eco-conception n'est pas</h3>
     <ul>
@@ -44,10 +44,6 @@
       bottom: 80%;
     }
     h2 {
-      color: rgba(255, 255, 255, 0.4);
-      font-weight: bold;
-      font-size: 11rem;
-      line-height: 0.9;
       z-index: 2;
       margin-left: -15.79%;
       margin-bottom: 10rem;
