--- a/src/components/LastWork.astro
+++ b/src/components/LastWork.astro
@@ -3,7 +3,7 @@ import BorderedButton from "./BorderedButton.astro";
 ---
 
 <section class='lastWork'>
-  <h2>Last work</h2>
+  <h2 class="subtitle">Last work</h2>
   <div class='lastWorkGrid'>
     <div class="gridText">
       <p>
@@ -32,17 +32,11 @@ import BorderedButton from "./BorderedButton.astro";
     gap: 8rem;
     padding-top: 20rem;
     h2 {
-      color: rgba(255, 255, 255, 0.4);
-      font-weight: bold;
-      font-size: 6rem;
-      line-height: 0.9;
-      max-width: 60vw;
       align-self: flex-end;
       z-index: 12;
     }
     p {
       color: white;
-      font-size: 2rem;
     }
     .gridText {
       margin-top: 5rem;
