--- a/src/components/Prices.astro
+++ b/src/components/Prices.astro
@@ -3,8 +3,8 @@ import BorderedButton from "./BorderedButton.astro";
 ---
 
 <section class='prices'>
-  <h2>Tarifs</h2>
-  <h3 class='subtitle'>Mes services</h3>
+  <h2 class="subtitle">Tarifs</h2>
+  <h3 class='cardsTitle'>Mes services</h3>
   <div class='priceCard'>
     <div class='header'>
       <h3>Développement de site web statique</h3>
@@ -37,7 +37,7 @@ import BorderedButton from "./BorderedButton.astro";
       impactantes
     </p>
   </div>
-  <h3 class='subtitle'>Mes partenaires</h3>
+  <h3 class='cardsTitle'>Mes partenaires</h3>
   <p class='description'>
     Je travaille avec des freelances graphistes qui permettront de réaliser
     votre projet de site web de bout en bout.
@@ -111,16 +111,11 @@ import BorderedButton from "./BorderedButton.astro";
     padding: 0 12%;
     padding-top: 20rem;
     h2 {
-      position: relative;
-      color: rgba(255, 255, 255, 0.4);
-      font-weight: bold;
-      font-size: 11rem;
-      line-height: 0.9;
       z-index: 2;
       margin-left: -15.79%;
       margin-bottom: 10rem;
     }
-    .subtitle {
+    .cardsTitle {
       color: white;
       text-align: center;
       font-size: 2rem;
