--- a/src/components/Strengths.astro
+++ b/src/components/Strengths.astro
@@ -3,7 +3,7 @@ import Eclair from "./Eclair.astro";
 ---
 
 <section class='strengths'>
-  <h2>Mes forces</h2>
+  <h2 class="subtitle">Mes forces</h2>
   <Eclair />
   <div class='services'>
     <div class='service'>
@@ -58,11 +58,6 @@ import Eclair from "./Eclair.astro";
       z-index: 200;
     }
     h2 {
-      color: rgba(255, 255, 255, 0.4);
-      font-weight: bold;
-      font-size: 6rem;
-      line-height: 0.9;
-      max-width: 60vw;
       position: relative;
       text-align: end;
       align-self: end;
