--- a/src/components/Technologies.astro
+++ b/src/components/Technologies.astro
@@ -3,7 +3,7 @@ import TechnologyGraph from "./TechnologyGraph.astro";
 ---
 
 <section class='technologies'>
-  <h2>Technology</h2>
+  <h2 class="subtitle">Technology</h2>
   <p>Paragraphe sur la pertinence du choix des différentes technos utilisées</p>
   <TechnologyGraph />
 </section>
@@ -15,12 +15,6 @@ import TechnologyGraph from "./TechnologyGraph.astro";
     display: flex;
     flex-direction: column;
     gap: 5rem;
-    h2 {
-      color: rgba(255, 255, 255, 0.4);
-      font-size: 11rem;
-      line-height: 0.9;
-      max-width: 60vw;
-    }
     p {
       color: white;
       font-size: 2rem;
