--- a/src/components/WebsiteCreation.astro
+++ b/src/components/WebsiteCreation.astro
@@ -3,7 +3,7 @@ import SquareHammer from "./SquareHammer.astro";
 ---
 
 <section class='websiteCreation'>
-  <h2>Création de sites web</h2>
+  <h2 class="subtitle">Création de sites web</h2>
   <p>
     Je réalise des <strong>sites web</strong>
     <em>sur mesure</em>, faciles à prendre en main
@@ -44,18 +44,11 @@ import SquareHammer from "./SquareHammer.astro";
     padding: 0 12%;
     z-index: 1;
     h2 {
-      color: rgba(255, 255, 255, 0.4);
-      font-weight: bold;
-      font-size: 6rem;
-      line-height: 0.9;
-      max-width: 60vw;
       top: 0;
-      margin: 0;
       margin-left: -16%;
     }
     p {
       color: #4f4f4f;
-      font-size: 1.25rem;
       position: absolute;
       top: 20rem;
       right: 12%;
@@ -126,8 +119,6 @@ import SquareHammer from "./SquareHammer.astro";
       gap: 2rem;
       padding-bottom: 15rem;
       h2 {
-        font-size: 3rem;
-        max-width: 80vw;
         margin-top: 5rem;
       }
       p {
