--- a/src/components/Websites.astro
+++ b/src/components/Websites.astro
@@ -1,5 +1,5 @@
 <section class='website'>
-  <h2>Ce que je<br />propose</h2>
+  <h2 class="subtitle">Ce que je<br />propose</h2>
   <div class='services'>
     <div class='service'>
       <h3>Sites clé en main et faciles</h3>
@@ -76,13 +76,10 @@
       z-index: 1;
     }
     h2 {
-      color: rgba(255, 255, 255, 0.4);
-      font-weight: bold;
-      font-size: 11rem;
-      line-height: 0.9;
       text-align: right;
       z-index: 2;
-      margin-right: -15.79%;
+      align-self: end;
+      margin-right: -12vw;
     }
     .services {
       display: flex;
