--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -154,6 +154,14 @@ import Footer from "../components/Footer.astro";
       font-style: italic;
     }
   }
+  .subtitle {
+    color: rgba(255, 255, 255, 0.4);
+    font-weight: bold;
+    font-size: 6rem;
+    line-height: 0.9;
+    max-width: 60vw;
+    margin: 0;
+  }
 
   a {
     cursor: pointer;
@@ -168,6 +176,10 @@ import Footer from "../components/Footer.astro";
       text-shadow:
         0px 0px 20px #000000aa,
         0px 0px 0.2em #000000aa;
+    }
+    .subtitle {
+      font-size: 3rem;
+      max-width: 80vw;
     }
   }
 </style>
