--- a/src/components/Eclair.astro
+++ b/src/components/Eclair.astro
@@ -84,20 +84,19 @@
       overflow: hidden;
       &::after {
         content: "";
-        background-color: white;
-        // background: linear-gradient(
-        //   to bottom,
-        //   #ffffff,
-        //   #ffffff 33%,
-        //   #ffffff00 66%,
-        //   #ffffff00 100%
-        // );
+        background: linear-gradient(
+          to bottom,
+          #ffffff,
+          #ffffff 33%,
+          #ffffff00 66%,
+          #ffffff00 100%
+        );
         position: absolute;
         top: 0;
         left: 0;
         width: 200%;
         height: 300%;
-        // animation: boom2 10s infinite linear;
+        animation: boom2 10s infinite linear;
       }
     }
     @keyframes boom {
