Optimize some images

--- a/src/components/AllTechnologies.astro
+++ b/src/components/AllTechnologies.astro
@@ -19,7 +19,7 @@
     flex-direction: column;
     align-items: center;
     height: 100vh;
-    background: url("/images/bubbles.jpg");
+    background: url("/images/bubbles.webp");
     background-size: cover;
     background-repeat: no-repeat;
     h2 {
