--- a/src/components/LastWork.astro
+++ b/src/components/LastWork.astro
@@ -22,7 +22,7 @@ import BorderedButton from "./BorderedButton.astro";
 
 <style lang='scss'>
   .lastWork {
-    background: url("/images/bg2.jpg");
+    background: url("/images/bg2.webp");
     background-size: cover;
     background-position: bottom;
     min-height: calc(127vw - 70rem);
