--- a/src/components/Prices.astro
+++ b/src/components/Prices.astro
@@ -100,7 +100,7 @@ import BorderedButton from "./BorderedButton.astro";
 
 <style lang='scss'>
   .prices {
-    background: url("/images/jungle2.jpg");
+    background: url("/images/jungle2.webp");
     background-size: cover;
     width: 100%;
     min-height: 100vh;
