--- a/src/components/Websites.astro
+++ b/src/components/Websites.astro
@@ -33,7 +33,7 @@
 
 <style lang='scss'>
   .website {
-    background: url("/images/frog.jpg");
+    background: url("/images/frog.webp");
     background-size: cover;
     background-position: center;
     width: 100%;
