--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -121,7 +121,7 @@ import PortfolioLayout from "../layouts/PortfolioLayout.astro";
     left: 0;
     width: 100vw;
     height: 100vh;
-    background: url("/images/stars.jpeg");
+    background: url("/images/stars.webp");
     background-size: cover;
     background-position: center;
     &::before {
