--- a/src/components/Clouds.astro
+++ b/src/components/Clouds.astro
@@ -17,7 +17,7 @@
     width: 100vw;
   }
   .cloud1 {
-    background-image: url("/images/clouds3.png");
+    background-image: url("/images/clouds3.webp");
     width: 50%;
     aspect-ratio: 2360 / 984;
     top: 0;
@@ -37,7 +37,7 @@
     }
   }
   .cloud2 {
-    background-image: url("/images/clouds3.png");
+    background-image: url("/images/clouds3.webp");
     width: 80%;
     aspect-ratio: 2360 / 984;
     top: -1rem;
@@ -46,7 +46,7 @@
     opacity: 0.9;
   }
   .cloud3 {
-    background-image: url("/images/clouds3.png");
+    background-image: url("/images/clouds3.webp");
     width: 40%;
     aspect-ratio: 2360 / 984;
     top: -6rem;
@@ -66,7 +66,7 @@
     }
   }
   .cloud4 {
-    background-image: url("/images/clouds3.png");
+    background-image: url("/images/clouds3.webp");
     width: 55%;
     aspect-ratio: 2360 / 984;
     top: 4rem;
@@ -87,7 +87,7 @@
     }
   }
   .cloud5 {
-    background-image: url("/images/clouds3.png");
+    background-image: url("/images/clouds3.webp");
     width: 80%;
     aspect-ratio: 2360 / 984;
     top: 1rem;
@@ -96,7 +96,7 @@
     opacity: 0.9;
   }
   .cloud6 {
-    background-image: url("/images/clouds3.png");
+    background-image: url("/images/clouds3.webp");
     width: 80%;
     aspect-ratio: 2360 / 984;
     top: 0;
