--- a/src/components/ContactSection.astro
+++ b/src/components/ContactSection.astro
@@ -15,7 +15,7 @@ import BorderedButton from "./BorderedButton.astro";
 
 <style lang='scss'>
   .contactSection {
-    background: url("/images/ecosse-background.jpg");
+    background: url("/images/ecosse-background.webp");
     background-size: cover;
     position: relative;
     height: 100vh;
@@ -33,7 +33,7 @@ import BorderedButton from "./BorderedButton.astro";
       position: absolute;
       top: 0;
       left: 0;
-      background: url("/images/train.png");
+      background: url("/images/train.webp");
       background-size: cover;
       z-index: 1;
     }
@@ -77,7 +77,7 @@ import BorderedButton from "./BorderedButton.astro";
       height: 50%;
       &::after {
         content: "";
-        background-image: url("/images/fog1large.png");
+        background-image: url("/images/fog1large.webp");
         background-repeat: repeat-x;
         background-position-y: bottom;
         width: 5000px;
@@ -89,7 +89,7 @@ import BorderedButton from "./BorderedButton.astro";
       }
       &::before {
         content: "";
-        background-image: url("/images/fog1large.png");
+        background-image: url("/images/fog1large.webp");
         background-repeat: repeat-x;
         background-position-y: bottom;
         width: 5000px;
