--- a/src/components/HeroFullstack.astro
+++ b/src/components/HeroFullstack.astro
@@ -15,7 +15,7 @@ import Clouds from "./Clouds.astro";
 
 <style lang="scss">
   .heroFullStack {
-    background: url('/images/banquise.jpg');
+    background: url('/images/banquise.webp');
     background-size: cover;
     background-position: center 20%;
     width: 100%;
