--- a/src/components/HeroSiteWeb.astro
+++ b/src/components/HeroSiteWeb.astro
@@ -30,7 +30,7 @@ import Partners from "./Partners.astro";
 
 <style lang='scss'>
   .heroSiteWeb {
-    background: url("/images/jungle.jpg");
+    background: url("/images/jungle.webp");
     background-size: cover;
     width: 100%;
     height: 100vh;
