--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -4,7 +4,7 @@
   </h1>
   <div class='contactWrapper'>
     <div class='contactAvatar'>
-      <img src='/images/avatar.png' alt='Kevin Lanvin' />
+      <img src='/images/avatar.webp' alt='Kevin Lanvin' />
     </div>
     <span>Hello, je suis Kévin !</span>
   </div>
@@ -29,7 +29,7 @@
     z-index: 2;
     &::after {
       content: "";
-      background-image: url("/images/fog1large.png");
+      background-image: url("/images/fog1large.webp");
       background-repeat: repeat-x;
       width: 5000px;
       height: 100%;
@@ -40,7 +40,7 @@
     }
     &::before {
       content: "";
-      background-image: url("/images/fog1large.png");
+      background-image: url("/images/fog1large.webp");
       background-repeat: repeat-x;
       width: 5000px;
       height: 100%;
