Mobile img on home page

--- a/src/components/ContactSection.astro
+++ b/src/components/ContactSection.astro
@@ -111,6 +111,7 @@ import BorderedButton from "./BorderedButton.astro";
       padding-top: 10rem;
       gap: 2rem;
       justify-content: flex-start;
+    background: url("/images/ecosse-background-mobile.webp");
       h2 {
         font-size: 2rem;
         line-height: 3rem;
