--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -22,7 +22,7 @@
     min-height: 100vh;
     padding-top: 165px;
     overflow-y: visible;
-    background: url("/images/bg.webp");
+    background-image: url("/images/bg.webp");
     background-color: #000;
     background-size: cover;
     background-repeat: no-repeat;
@@ -151,6 +151,7 @@
   @media screen and (max-width: 600px) {
     #hero {
       background-position-x: center;
+      background-image: url("/images/bg-mobile.webp");
       padding: 0 1rem;
       height: calc(100vh - 80px);
       max-height: calc(100vh - 80px);
