--- a/src/components/ContactSection.astro
+++ b/src/components/ContactSection.astro
@@ -7,7 +7,10 @@ import BorderedButton from "./BorderedButton.astro";
   <h2>
     Et si on discutait de <strong>vos projets</strong><br /><em>ensemble ?</em>
   </h2>
-  <BorderedButton addedClasses="contactButton" link="mailto:info.lanvink@gmail.com">
+  <BorderedButton
+    addedClasses='contactButton'
+    link='mailto:info.lanvink@gmail.com'
+  >
     Contactez-moi !
   </BorderedButton>
   <div class='shadow'></div>
@@ -111,7 +114,10 @@ import BorderedButton from "./BorderedButton.astro";
       padding-top: 10rem;
       gap: 2rem;
       justify-content: flex-start;
-    background: url("/images/ecosse-background-mobile.webp");
+      background: url("/images/ecosse-background-mobile.webp");
+      &::before {
+        background: url("/images/train-mobile.webp");
+      }
       h2 {
         font-size: 2rem;
         line-height: 3rem;
