Lastwork img format

--- a/src/components/LastWork.astro
+++ b/src/components/LastWork.astro
@@ -15,7 +15,7 @@ import BorderedButton from "./BorderedButton.astro";
       </BorderedButton>
     </div>
     <div class='gridImage'>
-      <img src='/images/lastWork.png' alt='Last work' />
+      <img src='/images/lastWork.webp' alt='Last work' />
     </div>
   </div>
 </section>
