Add explicit image sizeé

--- a/src/components/LastWork.astro
+++ b/src/components/LastWork.astro
@@ -16,6 +16,8 @@ import BorderedButton from "./BorderedButton.astro";
     </div>
     <div class='gridImage'>
       <img
+        width="1076"
+        height="980"
         srcset='/images/lastWork-mobile.webp 600w, /images/lastWork.webp 1076w'
         src='/images/lastWork.webp'
         alt='Last work'
