--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -44,6 +44,7 @@ import Footer from "../components/Footer.astro";
     src: url("/fonts/Poppins-Bold.ttf");
     font-weight: bold;
     font-style: normal;
+    font-display: swap;
   }
 
   @font-face {
@@ -51,6 +52,7 @@ import Footer from "../components/Footer.astro";
     src: url("/fonts/Poppins-Black.ttf");
     font-weight: black;
     font-style: normal;
+    font-display: swap;
   }
 
   @font-face {
@@ -58,6 +60,7 @@ import Footer from "../components/Footer.astro";
     src: url("/fonts/Poppins-ExtraLight.ttf");
     font-weight: lighter;
     font-style: normal;
+    font-display: swap;
   }
 
   @font-face {
@@ -65,6 +68,7 @@ import Footer from "../components/Footer.astro";
     src: url("/fonts/Poppins-Italic.ttf");
     font-weight: normal;
     font-style: italic;
+    font-display: swap;
   }
 
   @font-face {
@@ -72,6 +76,7 @@ import Footer from "../components/Footer.astro";
     src: url("/fonts/Poppins-Regular.ttf");
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
   }
 
   @font-face {
@@ -79,6 +84,7 @@ import Footer from "../components/Footer.astro";
     src: url("/fonts/Poppins-LightItalic.ttf");
     font-weight: 200;
     font-style: italic;
+    font-display: swap;
   }
 
   @font-face {
@@ -86,6 +92,7 @@ import Footer from "../components/Footer.astro";
     src: url("/fonts/Poppins-BoldItalic.ttf");
     font-weight: bold;
     font-style: italic;
+    font-display: swap;
   }
 
   :root {
