--- a/src/components/Ecoconception.astro
+++ b/src/components/Ecoconception.astro
@@ -14,7 +14,7 @@
     </ul>
   </div>
   <div class="peacock">
-    <img src="/images/peacock.webp" alt="Peacock">
+    <img src="/images/peacock.webp" alt="Peacock" width="747" height="783">
   </div>
 </section>
 
