Fix chrome responsiveness

--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -69,6 +69,13 @@ const {
       gap: 1rem;
       top: 50%;
     }
+    .mockup {
+      display: flex;
+      flex-direction: column;
+      :global(img) {
+        min-height: 0;
+      }
+    }
     .description {
       left: 0;
       width: 100%;
