Add default black sky before stars load

--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -120,7 +120,7 @@ import PortfolioLayout from "../layouts/PortfolioLayout.astro";
     left: 0;
     width: 100vw;
     height: 100vh;
-    background: url("/images/stars.webp");
+    background: url("/images/stars.webp"), black;
     background-size: cover;
     background-position: center;
     &::before {
