--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,7 +6,7 @@
     <div class='contactAvatar'>
       <img src='/images/avatar.webp' alt='Kevin Lanvin' />
     </div>
-    <span>Hello, je suis Kévin !</span>
+    <span>Hello, moi c'est Kévin !</span>
   </div>
   <div class="nextSectionGradient"></div>
 </section>
