--- a/src/components/SimpleSection.astro
+++ b/src/components/SimpleSection.astro
@@ -20,9 +20,7 @@
     <div class='border-container'>
       <div class='borderLeft'></div>
       <div class='borderRight'></div>
-      <p>
-        Phrase sur la notion de fullstack (donc en vue de rejoindre une équipe)
-      </p>
+      <p>J'interviens sur toute votre stack Javascript, Typescript au sein de votre équipe de développeurs agiles</p>
     </div>
     <div class='leavingArrow'></div>
   </div>
@@ -44,7 +42,7 @@
     }
     .incomingArrow {
       clip-path: url(#incomingArrowSvg);
-      width: 30%;
+      height: 30rem;
       aspect-ratio: 208 / 662;
       max-width: 208px;
       position: absolute;
