--- a/src/components/SquareHammer.astro
+++ b/src/components/SquareHammer.astro
@@ -4,10 +4,10 @@
     <span class='text'>Facilité d'utilisation et clef en main</span>
   </div>
   <div class='square'>
-    <span class='text'>Facilité d'utilisation et clef en main</span>
+    <span class='text'>Performance, accessibilité et référencement</span>
   </div>
   <div class='square'>
-    <span class='text'>Facilité d'utilisation et clef en main</span>
+    <span class='text'>Eco-conception</span>
   </div>
 </div>
 
