--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -170,8 +170,13 @@ import Footer from "../components/Footer.astro";
     margin: 0;
   }
 
+  p {
+    line-height: 2rem;
+  }
   a {
     cursor: pointer;
+    color: inherit;
+    text-decoration: underline;
   }
 
   @media screen and (max-width: 600px) {
