--- a/src/components/BorderedButton.astro
+++ b/src/components/BorderedButton.astro
@@ -79,6 +79,7 @@ const { addedClasses = "", link = "" } = Astro.props;
     font-weight: bold;
     font-size: 1rem;
     display: block;
+    text-decoration: none;
   }
   @media screen and (max-width: 600px) {
     .borderedButton {
