--- a/src/components/LastWork.astro
+++ b/src/components/LastWork.astro
@@ -3,13 +3,16 @@ import BorderedButton from "./BorderedButton.astro";
 ---
 
 <section class='lastWork'>
-  <h2 class='subtitle'>Last work</h2>
-  <div class='lastWorkGrid'>
+  <h2 class='subtitle'>Dernière réalisation</h2>
+  <div class='lastWorkContent'>
     <div class='gridText'>
-      <p>
-        Paragraphe sur la dernière TOP réalisation paragraphe sur la dernière
-        TOP réalisation paragraphe sur la dernière TOP réalisation
-      </p>
+      <p>Refonte d'un site vitrine clé en main en partenariat avec l'agence lilloise Dalt.</p>
+      <ul>
+        <li>Refonte de l'identité visuelle</li>
+        <li>Amélioration de l'expérience utilisateur</li>
+        <li>Amélioration des performances</li>
+        <li>Refonte complète du tunnel de commande</li>
+      </ul>
       <BorderedButton link='portfolio'
         >Découvrir mes réalisations
       </BorderedButton>
@@ -18,8 +21,7 @@ import BorderedButton from "./BorderedButton.astro";
       <img
         width="1076"
         height="980"
-        srcset='/images/lastWork-mobile.webp 600w, /images/lastWork.webp 1076w'
-        src='/images/lastWork.webp'
+        src='/images/project-lamie.png'
         alt='Last work'
         sizes='(max-width: 600px) calc(100vw -2rem), 60vw'
       />
@@ -32,7 +34,6 @@ import BorderedButton from "./BorderedButton.astro";
     background: url("/images/bg2.webp");
     background-size: cover;
     background-position: bottom;
-    min-height: calc(127vw - 70rem);
     position: relative;
     display: flex;
     flex-direction: column;
@@ -41,24 +42,33 @@ import BorderedButton from "./BorderedButton.astro";
     h2 {
       align-self: flex-end;
       z-index: 12;
-    }
-    p {
-      color: white;
+      text-align: right;
     }
     .gridText {
-      margin-top: 5rem;
       display: flex;
       flex-direction: column;
-      gap: 5rem;
+      gap: 2rem;
       align-items: flex-start;
+      max-width: 40%;
+      min-width: 30rem;
+      color: white;
+      line-height: 2rem;
     }
-    .lastWorkGrid {
-      display: grid;
-      grid-template-columns: 30% 1fr;
+    .lastWorkContent {
+      display: flex;
+      gap: 5rem;
       margin: 0 12%;
+      margin-bottom: 10rem;
     }
     .gridImage {
-      padding-top: 5rem;
+      flex: 1;
+      min-width: 0;
+      :global(img) {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        object-position: top;
+      }
     }
   }
 
@@ -73,8 +83,8 @@ import BorderedButton from "./BorderedButton.astro";
         max-width: 80vw;
         text-align: end;
       }
-      .lastWorkGrid {
-        grid-template-columns: 1fr;
+      .lastWorkContent {
+        flex-direction: column;
         margin: 0;
         margin-bottom: 5rem;
       }
@@ -85,6 +95,7 @@ import BorderedButton from "./BorderedButton.astro";
         order: 2;
         z-index: 2;
         align-items: center;
+        min-width: 100%;
         p {
           width: 100%;
           font-size: 1rem;
